Attempt at fixing fixed elements on mobile, part 4

--- a/www/style-grey.linux.css
+++ b/www/style-grey.linux.css
@@ -2602,6 +2602,7 @@ div > .MJXc-display {
 @media only screen and (hover: none), only screen and (-moz-touch-enabled) {
 	#ui-elements-container {
 		height: unset;
+		position: unset;
 	}
 	#ui-elements-container > * {
 		position: fixed;
